--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "author": "nairo-mudumane <nairomudumane@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx src/index.ts"
+    "dev": "tsx watch src/index.ts"
   },
   "devDependencies": {
+    "prisma": "^4.5.0",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "fastify": "^4.9.2"
   }
 }
